--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 rabbit:
-    queues:
-        tut-1-queue-1:
-            name: 'tut-1-queue-1'
+    part-1:
+        queue-name: 'part-1-queue-1'
+    part-2:
+        workload-range: 10
+        queue-name: 'part-2-queue-1'
 
